@@ -44,8 +44,9 @@ alias @entra    @entrances
 alias @entran   @entrances
 alias @entranc  @entrances
 alias @entrance @entrances
-alias @extansi  @nameaccent
-alias @ansiname @nameaccent
+alias @extansi  @moniker
+alias @ansiname @moniker
+alias @nameaccent @moniker
 alias @fe       @femit
 alias @fem      @femit
 alias @femi     @femit
@@ -460,6 +461,8 @@ function_alias  secs2time       convsecs
 function_alias  time2secs       convtime
 function_alias  ufun            u
 function_alias  who             lwho
+function_alias  iname           moniker
+function_alias  ansiname        moniker
 #
 attr_alias adeath       akill
 attr_alias adescribe    adesc
