@@ -1,6 +1,6 @@
 // _build.h
 //
-// $Id: _build.h,v 1.36 2002-09-12 05:41:17 sdennis Exp $
+// $Id: _build.h,v 1.37 2002-09-19 05:24:42 sdennis Exp $
 //
 // MUX 2.1
 // Copyright (C) 1998 through 2002 Solid Vertical Domains, Ltd. All
@@ -22,8 +22,8 @@ extern char szBuildDate[];
 #define MUX_BUILD_DATE szBuildDate
 #endif // MUX_BUILD_DATE
 
-#define MUX_VERSION       "2.2.0.35"     // Version number
-#define MUX_RELEASE_DATE  "2002-SEP-11"  // Source release date
+#define MUX_VERSION       "2.2.0.36"     // Version number
+#define MUX_RELEASE_DATE  "2002-SEP-18"  // Source release date
 
 // Define if this release is qualified as ALPHA or BETA.
 //
